# $Id: Makefile.am,v 1.5 2022/01/02 22:18:43 sarrazip Exp $

SUBDIRS = src macros doc

doc_DATA = \
	AUTHORS \
	COPYING \
	NEWS \
	README \
	THANKS

EXTRA_DIST = \
	config.rpath  \
	bootstrap \
	autogen.sh \
	mkinstalldirs

ACLOCAL_AMFLAGS = -I macros

MAINTAINERCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	configure \
	config.guess \
	config.sub \
	depcomp \
	install-sh \
	missing
